--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>AluraFlix</title>
 <head>Alura Flix</head>  
-    <h1>Através do aranha verso</h1>
+    <h1>Através do aranha verso supera o primeiro filme</h1>
     <p> Homem aranha </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/6Hj-l6tE4XI?si=Cjw_w14PmTGy44_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <body>
