--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>AluraFlix</title>
 <head>Alura Flix</head> 
 <section>
-<div>
+<div class="chamada-texto">
     <h1>Através do aranha verso supera o primeiro filme</h1>
     <p> Homem aranha </p>
 </div>
