insrindo miniaturas de vídeos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
 </section>
 <section>
     <h2>filmes e séries</h2>
-    <div><a href=""></a>
+    <div>
+        <a href="https://www.youtube.com/watch?v=CyiiEJRZjSU
+        "
+        <img src="https://img.youtube.com/vi/CyiiEJRZjSU/maxresdefault.jpg
+        
+        "
+    </div>
+    <div class="categoria-videos"
         #lista de videos
     </div>
 </section>
