--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <section>
     <h2>filmes e séries</h2>
     <div>
-        <a href="https://www.youtube.com/watch?v=CyiiEJRZjSU
-        "
-        <img src="https://img.youtube.com/vi/CyiiEJRZjSU/maxresdefault.jpg
-        
-        "
+        <a href="https://www.youtube.com/watch?v=CyiiEJRZjSU"
+        <img src="https://img.youtube.com/vi/CyiiEJRZjSU/maxresdefault.jpg"
+    
+        <a href="https://www.youtube.com/watch?v=GNHjV8koGj4"
+
     </div>
     <div class="categoria-videos"
         #lista de videos
