ajustando os videos

--- a/index.html
+++ b/index.html
@@ -22,27 +22,24 @@
     #VIDEOS AQUI"
 </div>
 </section>
+<section>
 <h2>filmes e séries</h2>
  <div>
         <a href="https://www.youtube.com/watch?v=CyiiEJRZjSU"
         <img src="https://img.youtube.com/vi/CyiiEJRZjSU/maxresdefault.jpg"
- </div>
- <div>
+ </a>
         <a href="https://www.youtube.com/watch?v=GNHjV8koGj4"
 <img src="https://img.youtube.com/vi/GNHjV8koGj4/maxresdefault.jpg"
- </div>
-<div>
+ </a>
 <a href="https://www.youtube.com/watch?v=KPCfjcyO3fg"
 <img src="https://img.youtube.com/vi/KPCfjcyO3fg/maxresdefault.jpg"
-</div>
-<div>
+</a>
 <a href="https://www.youtube.com/watch?v=o17EjWGHYBo"
 <img src="https://img.youtube.com/vi/o17EjWGHYBo/maxresdefault.jpg"
-</div>
-<div>
+</a>
 <a href="https://www.youtube.com/watch?v=1gnma3w7adI"
 <img src="https://img.youtube.com/vi/1gnma3w7adI/maxresdefault.jpg"
-
+</a>
     </div>
     
     
