--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/6Hj-l6tE4XI?si=Cjw_w14PmTGy44_W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </section>
+<body>
 <section>
     <h2>filmes e séries</h2>
     <div class="categoria-videos"
